--- a/beautyKurly.html
+++ b/beautyKurly.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>beautyKurly</title>
 </head>
 <body>
-    test
+    <div class="wrap">
+        <div class="wrap-img">
+            <img src="./images/beautyKurly.png" alt="">
+        </div>
+    </div>
 </body>
 </html>
