민정 1.beautyKurly페이지

--- a/beautyKurly.html
+++ b/beautyKurly.html
@@ -3,15 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>beautyKurly</title>
+
+    <link rel="stylesheet" href="css/beautyKurly.css">
+    <link rel="stylesheet" href="common.css">
+
+    <script src="/js/header_seuil.js"></script>
+    <script src="/js/include.js"></script>
+
+    <script src="/js/beautyKurly.js" defer></script>
   </head>
 
   <body>
     <div class="wrap">
-      <div class="wrap-img">
         <img src="./images/beautyKurly.png" alt="" />
+      <div class="wrap-text">
+        <p>첫 구매 쿠폰</p>
       </div>
+      <div class="wrap-text">
+        <p>추천상품</p>
+      </div>
+
     </div>
   </body>
 </html>
