--- a/header.html
+++ b/header.html
@@ -6,6 +6,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="/css/marketK_header.css">
+
+    <script src="/js/header_jy.js" defer></script>
+    <script src="/js/header_seuil.js" defer></script>
+    <script src="/js/include.js" defer></script>
 </head>
 <body>
     <header>
@@ -490,40 +494,6 @@
                 <span>배송안내</span>
             </a></li>
         </ul>
-    </nav>
-    <script>
-        const btn=document.querySelector(".hamberger_btn");
-        const c_title=document.querySelector(".category_title");
-        const menu=document.querySelector(".category");
-
-        btn.addEventListener('click', function() {
-            menu.classList.toggle('active');
-        });
-            c_title.addEventListener('click', function() {
-                menu.classList.toggle('active');
-            });
-        
-        
-        const subTitles = document.querySelectorAll(".subcategory_title");
-
-        subTitles.forEach(function(title) {
-
-            title.addEventListener('click', function() {
-
-                const currentMenu = this.nextElementSibling;
-
-                // 1️⃣ 모든 subcategory 닫기
-                document.querySelectorAll(".subcategory")
-                    .forEach(function(menu) {
-                        if(menu !== currentMenu) {
-                            menu.classList.remove("active");
-                        }
-                    });
-
-                // 2️⃣ 현재 것만 토글
-                currentMenu.classList.toggle("active");
-            });
-        });
-    </script>    
+    </nav> 
 </body>
 </html>
