--- a/main.html
+++ b/main.html
@@ -12,6 +12,8 @@
     
     <!-- 공통 JS -->
     <script src="/js/header_seuil.js" defer></script>
+    <script src="/js/header_jy.js" defer></script>
+    <script src="/js/footer.js" defer></script>
     <script src="/js/include.js" defer></script>
 
     <!-- 이 페이지 전용 JS -->
@@ -65,7 +67,7 @@
         <div class="mainBox">
           <img name="mainImg" src="./images/mainHeader13.jpg" alt="" />
         </div>
-      </div> -->
+      </div>
     </div>
     <section class="section1">
       <div class="text">
