--- a/main.html
+++ b/main.html
@@ -202,7 +202,7 @@
       <div class="text">
         <div class="title">
             오직 뷰티컬리에서만 만나요
-            <img src="./images/" alt="">
+            <img src="./images/화살표.png" alt="">
         </div>
         <p class="subTitle">[Kurly Only] 특별한 단독 기획세트</p>
       </div>
