--- a/index.html
+++ b/index.html
@@ -1,33 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>마켓컬리</title>
-
-    <!-- 공통 UI 로드 스크립트 -->
-    <link rel="stylesheet" href="/common.css">
-
-    <!-- 이 페이지 전용 UI 스크립트 -->
-     <link rel="stylesheet" href="/css/index.css">
-
-    <!-- 공통 JS 스크립트 -->
-    <script src="/js/header_seuil.js" defer></script>
-    <script src="/js/header_jy.js" defer></script>
-    <script src="/js/footer.js" defer></script>
-    <script src="/js/include.js" defer></script>
-    
-    <!-- 이 페이지 전용 JS 스크립트-->
-    <script src="/js/index.js" defer></script>
-
+    <script>
+        // GitHub Pages 등에서 index.html로 접속했을 때,
+        // 실제 메인 페이지인 main.html로 즉시 이동시킵니다.
+        window.location.href = "main.html";
+    </script>
 </head>
 <body>
-    <!-- 헤더 영역 -->
-    <header id="header-placeholder"></header>
-
-    <main>메인 컨텐츠 영역</main>
-
-    <!-- 푸터 영역 -->
-    <footer id="footer-placeholder"></footer>
+    <p>메인 페이지로 이동 중입니다...</p>
 </body>
 </html>
